kubernetes/apps/kube-system/kubernetes-replicator/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubernetes-replicator
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-replicator
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9102"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
